[package]
name = "libfsntfs-sys"
version = "0.1.0"
authors = ["Omer Ben-Amram <omerbenamram@gmail.com>"]
edition = "2018"
links = "libfsntfs"

[dependencies]
chrono = "0.4.6"
time = "0.1.42"
log = "*"
failure = "*"

[dev-dependencies]
env_logger = "*"
lazy_static = "*"

[build-dependencies]
reqwest = "*"
flate2 = "*"
tar = "*"
failure = "*"

[features]

default = []

# Use when building static bindings
static_link = []

[[example]]
name = "file_attributes"
path = "examples/file_attributes.rs"