[package]
name = "libyal-rs-common-build"
description = "Internal build utilities"
license = "LGPL-3.0+"
homepage = "https://github.com/omerbenamram/libyal-rs"
repository = "https://github.com/omerbenamram/libyal-rs"

version = "0.2.0"
authors = ["Omer Ben-Amram <omerbenamram@gmail.com>"]
edition = "2018"


[dependencies]
failure = "0.1.5"
bindgen = "0.49.0"
fs_extra = "1.1.0"

[target.'cfg(target_os = "windows")'.dependencies]
cc = "1.0.35"
encoding_rs = "0.8.17"
encoding_rs_io = "0.1.6"
walkdir = "2.2.7"
