[package]
name = "libyal-rs-common"
description = "Internal utilities"
license = "LGPL-3.0+"
homepage = "https://github.com/omerbenamram/libyal-rs"
repository = "https://github.com/omerbenamram/libyal-rs"
version = "0.2.2"
authors = [ "Omer Ben-Amram <omerbenamram@gmail.com>",]
edition = "2018"

[dependencies]
chrono = "0.4.6"
time = "0.1.42"
log = "0.4.6"
failure = "0.1.5"

[dev-dependencies]
env_logger = "0.6.1"
lazy_static = "1.3.0"

[features]
default = []
