[package]
name = "libbfio-sys"
description = "Rust bindings for libbfio (https://github.com/libyal/libbfio)"
homepage = "https://github.com/omerbenamram/libbfio-sys"
repository = "https://github.com/omerbenamram/libbfio-sys"
license = "LGPL-3.0+"

readme = "README.md"
version = "0.1.3"
authors = ["Omer Ben-Amram <omerbenamram@gmail.com>"]
edition = "2018"
links = "libbfio"

[build-dependencies]
failure = "0.1.5"
bindgen = "*"

[target.'cfg(target_os = "windows")'.build-dependencies]
cc = "*"
encoding_rs = "*"
encoding_rs_io = "*"
walkdir = "*"

[features]

default = []

# Use when building dynamic bindings.
dynamic_link = []