[package]
name = "libbfio-rs"
version = "0.1.0"
authors = ["Omer Ben-Amram <omerbenamram@gmail.com>"]
edition = "2018"

[dependencies]
libbfio-sys = {path = "../libbfio-sys"}
libyal-rs-common = "0.2.0"
libcerror-sys = "0.2.0"
chrono = "0.4.6"
time = "0.1.42"
log = "0.4.6"
failure = "0.1.5"

[dev-dependencies]
tempdir = "0.3.7"

[features]

default = []

# Use when building dynamic bindings.
dynamic_link = ["libbfio-sys/dynamic_link"]
