[package]
name = "libcerror-sys"
description = "Rust bindings for libcerror (https://github.com/libyal/libcerror)"
homepage = "https://github.com/omerbenamram/libyal-rs"
repository = "https://github.com/omerbenamram/libyal-rs"
license = "LGPL-3.0+"

readme = "README.md"
version = "0.1.3"
authors = ["Omer Ben-Amram <omerbenamram@gmail.com>"]
edition = "2018"
links = "libcerror"

[build-dependencies]
failure = "0.1.5"
libyal-rs-common-build = {path = "../common-build"}

[features]

default = []

# Use when building dynamic bindings.
dynamic_link = []