[package]
name = "libfsntfs-sys"
description = "Rust bindings for libfsntfs (https://github.com/libyal/libfsntfs)"
homepage = "https://github.com/omerbenamram/libfsntfs-sys"
repository = "https://github.com/omerbenamram/libfsntfs-sys"
license = "LGPL-3.0+"

readme = "README.md"
version = "0.1.3"
authors = ["Omer Ben-Amram <omerbenamram@gmail.com>"]
edition = "2018"
links = "libfsntfs"

[build-dependencies]
reqwest = "0.9.13"
flate2 = "1.0.7"
tar = "0.4.22"
failure = "0.1.5"
bindgen = "*"

[features]

default = []

# Use when building static bindings
# it's possible to define LIBFSNTFS_STATIC_LIBPATH to build against local checkout of the library.
static_link = []