[package]
name = "libfsntfs-sys"
description = "Rust bindings for libfsntfs (https://github.com/libyal/libfsntfs)"
homepage = "https://github.com/omerbenamram/libyal-rs"
repository = "https://github.com/omerbenamram/libyal-rs"
license = "LGPL-3.0+"

version = "0.2.0"
authors = ["Omer Ben-Amram <omerbenamram@gmail.com>"]
edition = "2018"

[build-dependencies]
failure = "0.1.5"
libyal-rs-common-build = { path = "../common-build", version = "0.2.1" }

[features]

default = []

# Use when building dynamic bindings.
dynamic_link = []
