[package]
name = "libfsntfs-sys"
description = "Rust bindings for libfsntfs (https://github.com/libyal/libfsntfs)"
homepage = "https://github.com/omerbenamram/libyal-rs"
repository = "https://github.com/omerbenamram/libyal-rs"
license = "LGPL-3.0+"
version = "0.2.5"
authors = [ "Omer Ben-Amram <omerbenamram@gmail.com>",]
edition = "2018"

[build-dependencies]
failure = "0.1.5"

[features]
default = []
dynamic_link = []

[build-dependencies.libyal-rs-common-build]
path = "../common-build"
version = "0.2.5"
